--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenneth Thakur</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <!-- Header Section -->
         <header>
             <div class="bio">
                 <h1>Kenneth Thakur</h1>
-                <p>I am a BSc Student in IT Management at the <strong>University of Auckland</strong> (Science Scholar). My interests are in Deep Learning, Reinforcement Learning, and their applications to space systems and predictive modeling.</p>
+                <p>I am a BSc Student in Information & Technology Management at the <strong>University of Auckland</strong>. I was recognized as a Science Scholar (Top 5% Cohort) for academic excellence. My interests lie in Deep Learning, Reinforcement Learning, and their applications to predictive modeling and autonomous systems.</p>
                 <div class="links">
-                    <a href="mailto:Kenneth.thakur@gmail.com">Email</a> / 
+                    <a href="mailto:ktha335@aucklanduni.ac.nz">Email</a> / 
                     <a href="https://www.linkedin.com/in/kenneth-thakur">LinkedIn</a> / 
                     <a href="https://github.com/Kenneth-Thakur">GitHub</a>
                 </div>
@@ -24,7 +24,6 @@
             </div>
         </header>
 
-        <!-- Project Section 1 -->
         <section>
             <h2>Technical Projects</h2>
             
@@ -35,12 +34,11 @@
                 <div class="project-info">
                     <h3>AI-Powered Solar Flare Prediction System</h3>
                     <p class="authors"><strong>Kenneth Thakur</strong> | Python, TensorFlow (LSTM/CNN), NASA API</p>
-                    <p class="links-row"><a href="#">project page</a> / <a href="#">code</a></p>
-                    <p>Built a deep learning model to predict M-class and X-class solar flares 24 hours in advance by analyzing real-time magnetogram data from NASA's Solar Dynamics Observatory.</p>
+                    <p class="links-row"><a href="https://github.com/Kenneth-Thakur">code</a></p>
+                    <p>Built a deep learning model to predict M-class and X-class solar flares 24 hours in advance by analyzing real-time magnetogram data from NASA's Solar Dynamics Observatory. Engineered magnetic complexity features to achieve high accuracy in forecasting rare space weather events.</p>
                 </div>
             </div>
 
-            <!-- Project Section 2 -->
             <div class="project">
                 <div class="project-img">
                     <img src="satellite.png" alt="Satellite Project">
@@ -48,8 +46,8 @@
                 <div class="project-info">
                     <h3>AI-Autonomous Satellite Collision Avoidance</h3>
                     <p class="authors"><strong>Kenneth Thakur</strong> | Reinforcement Learning (PPO), Python</p>
-                    <p class="links-row"><a href="#">code</a></p>
-                    <p>Engineered a Deep Reinforcement Learning agent to autonomously control satellite thrusters in a high-fidelity orbital simulation to prevent Kessler Syndrome scenarios.</p>
+                    <p class="links-row"><a href="https://github.com/Kenneth-Thakur">code</a></p>
+                    <p>Engineered a Deep Reinforcement Learning agent to autonomously control satellite thrusters in high-fidelity orbital simulations. Utilized CelesTrak TLE data to simulate debris environments and trained the agent to execute fuel-efficient evasion maneuvers.</p>
                 </div>
             </div>
         </section>
