--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="bio">
                 <h1>Kenneth Thakur</h1>
-                <p>I am a BSc Student in Information & Technology Management at the <strong>University of Auckland</strong>. I was recognized as a Science Scholar (Invited to Top 5% Cohort) for academic excellence. My interests lie in Deep Learning, Reinforcement Learning, and their applications to predictive modeling and autonomous systems.</p>
+                <p>I am a BSc Student in Information Technology Management at the University of Auckland. Recognised as a Science Scholar for academic excellence. My interests lie in Deep Learning, Reinforcement Learning, and applications to various autonomous systems.</p>
                 <div class="links">
                     <a href="mailto:ktha335@aucklanduni.ac.nz">Email</a> / 
                     <a href="https://www.linkedin.com/in/kenneth-thakur">LinkedIn</a> / 
@@ -34,8 +34,8 @@
                 <div class="project-info">
                     <h3>AI-Powered Solar Flare Prediction System</h3>
                     <p class="authors"><strong>Kenneth Thakur</strong> | Python, TensorFlow (LSTM/CNN), NASA API</p>
-                    <p class="links-row"><a href="https://github.com/Kenneth-Thakur">code</a></p>
-                    <p>Built a deep learning model to predict M-class and X-class solar flares 24 hours in advance by analyzing real-time magnetogram data from NASA's Solar Dynamics Observatory.</p>
+                    <p class="links-row"><a href="https://github.com/Kenneth-Thakur">project page</a> / <a href="https://github.com/Kenneth-Thakur">code</a></p>
+                    <p>Built a deep learning model to predict M-class and X-class solar flares 24 hours in advance by analyzing real-time magnetogram data from NASA's Solar Dynamics Observatory. Engineered magnetic complexity features to train Time-Series models, achieving high accuracy.</p>
                 </div>
             </div>
 
@@ -46,8 +46,8 @@
                 <div class="project-info">
                     <h3>AI-Autonomous Satellite Collision Avoidance</h3>
                     <p class="authors"><strong>Kenneth Thakur</strong> | Reinforcement Learning (PPO), Python</p>
-                    <p class="links-row"><a href="https://github.com/Kenneth-Thakur">code</a></p>
-                    <p>Engineered a Deep Reinforcement Learning agent to autonomously control satellite thrusters in high-fidelity orbital simulations to prevent Kessler Syndrome scenarios.</p>
+                    <p class="links-row"><a href="https://github.com/Kenneth-Thakur">project page</a> / <a href="https://github.com/Kenneth-Thakur">code</a></p>
+                    <p>Engineered a Deep Reinforcement Learning agent to autonomously control satellite thrusters in high-fidelity orbital simulations. Utilized CelesTrak TLE data to simulate a realistic debris environment and execute fuel-efficient evasion maneuvers.</p>
                 </div>
             </div>
 
@@ -58,8 +58,8 @@
                 <div class="project-info">
                     <h3>Data-Driven Asteroid Mining Prospector</h3>
                     <p class="authors"><strong>Kenneth Thakur</strong> | Scikit-Learn, Pandas, Spectral Analysis</p>
-                    <p class="links-row"><a href="https://github.com/Kenneth-Thakur">code</a></p>
-                    <p>Built a Random Forest classifier to analyze astronomical spectral data, identifying asteroids with high probabilities of containing valuable resources.</p>
+                    <p class="links-row"><a href="https://github.com/Kenneth-Thakur">project page</a> / <a href="https://github.com/Kenneth-Thakur">code</a></p>
+                    <p>Built a Random Forest classifier to analyze astronomical spectral data, identifying asteroids with high probabilities of containing valuable resources. Created an interactive 3D visualization of the inner solar system to map mining targets.</p>
                 </div>
             </div>
         </section>
