--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
         </header>
 
         <section>
-            <h2>Technical Projects</h2>
+            <h2><del>Technical</del> Data Science</h2>
+            <p>My <del>technical</del> data science interests are generally in deep learning (time-series, reasoning, forecasting) and their applications to space weather forecasting and autonomous orbital satellite collision avoidance systems.</p>
             
             <div class="project">
                 <div class="project-img">
                     <img src="solar-flare.png" alt="Solar Flare Project">
                 </div>
                 <div class="project-info">
-                    <h3>AI-Powered Solar Flare Prediction System</h3>
-                    <p class="authors"><strong>Kenneth Thakur</strong> | Python, TensorFlow (LSTM/CNN), NASA API</p>
-                    <p class="links-row"><a href="https://github.com/Kenneth-Thakur">project page</a> / <a href="https://github.com/Kenneth-Thakur">code</a></p>
-                    <p>Built a deep learning model to predict M-class and X-class solar flares 24 hours in advance by analyzing real-time magnetogram data from NASA's Solar Dynamics Observatory. Engineered magnetic complexity features to train Time-Series models, achieving high accuracy.</p>
+                    <a class="project-title" href="#">AI-Powered Solar Flare Prediction System</a>
+                    <p class="authors"><strong>Kenneth Thakur</strong>, NASA API, TensorFlow</p>
+                    <p class="status">University of Auckland 2025</p>
+                    <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
+                    <p class="description">We built a deep learning model to predict solar flares using real-time magnetogram data from NASA's Solar Dynamics Observatory. Our approach engineered magnetic complexity features for time-series forecasting, achieving high accuracy for rare events.</p>
                 </div>
             </div>
 
@@ -44,10 +46,11 @@
                     <img src="satellite.png" alt="Satellite Project">
                 </div>
                 <div class="project-info">
-                    <h3>AI-Autonomous Satellite Collision Avoidance</h3>
-                    <p class="authors"><strong>Kenneth Thakur</strong> | Reinforcement Learning (PPO), Python</p>
-                    <p class="links-row"><a href="https://github.com/Kenneth-Thakur">project page</a> / <a href="https://github.com/Kenneth-Thakur">code</a></p>
-                    <p>Engineered a Deep Reinforcement Learning agent to autonomously control satellite thrusters in high-fidelity orbital simulations. Utilized CelesTrak TLE data to simulate a realistic debris environment and execute fuel-efficient evasion maneuvers.</p>
+                    <a class="project-title" href="#">AI-Autonomous Satellite Collision Avoidance</a>
+                    <p class="authors"><strong>Kenneth Thakur</strong>, Reinforcement Learning, PPO</p>
+                    <p class="status">Technical Project 2025</p>
+                    <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
+                    <p class="description">I engineered a Deep Reinforcement Learning agent to control satellite thrusters in high-fidelity orbital simulations. Utilizing CelesTrak TLE data, we simulated a realistic debris environment, training the agent to execute fuel-efficient evasion maneuvers.</p>
                 </div>
             </div>
 
@@ -56,12 +59,31 @@
                     <img src="asteroid.png" alt="Asteroid Project">
                 </div>
                 <div class="project-info">
-                    <h3>Data-Driven Asteroid Mining Prospector</h3>
-                    <p class="authors"><strong>Kenneth Thakur</strong> | Scikit-Learn, Pandas, Spectral Analysis</p>
-                    <p class="links-row"><a href="https://github.com/Kenneth-Thakur">project page</a> / <a href="https://github.com/Kenneth-Thakur">code</a></p>
-                    <p>Built a Random Forest classifier to analyze astronomical spectral data, identifying asteroids with high probabilities of containing valuable resources. Created an interactive 3D visualization of the inner solar system to map mining targets.</p>
+                    <a class="project-title" href="#">Data-Driven Asteroid Mining Prospector</a>
+                    <p class="authors"><strong>Kenneth Thakur</strong>, Scikit-Learn, Spectral Analysis</p>
+                    <p class="status">Technical Project 2025</p>
+                    <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
+                    <p class="description">We trained Random Forest classifiers to analyze astronomical spectral data, identifying asteroids with high probabilities of containing valuable mining resources. Our project created an interactive 3D visualization of the inner solar system orbital map.</p>
                 </div>
             </div>
+        </section>
+
+        <section class="teaching">
+            <h2>Community Service</h2>
+            <ul>
+                <li>
+                    <a href="#">Class Representative</a>, University of Auckland
+                    <div class="sub-text">2023 & 2025</div>
+                </li>
+                <li>
+                    <a href="#">Lets Talk to Locals Volunteer</a>, University of Auckland
+                    <div class="sub-text">2023 - 2024</div>
+                </li>
+                <li>
+                    <a href="#">Youth Leader</a>, St John Ambulance
+                    <div class="sub-text">2020 - 2021</div>
+                </li>
+            </ul>
         </section>
     </div>
 </body>
