--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
 <body>
     <div class="container">
         <header>
+            <div class="profile-pic">
+                <img src="profile.jpg" alt="Kenneth Thakur">
+            </div>
             <div class="bio">
                 <h1>Kenneth Thakur</h1>
-                <p>I am a BSc Student in Information Technology Management at the University of Auckland. Recognised as a Science Scholar for academic excellence. My interests lie in Deep Learning, Reinforcement Learning, and applications to various autonomous systems.</p>
+                <p>I am a BSc Student in Information Technology Management at the University of Auckland and a Science Scholar (Top 5%). My work focuses on building autonomous systems using Deep Learning and Reinforcement Learning.</p>
                 <div class="links">
                     <a href="mailto:ktha335@aucklanduni.ac.nz">Email</a> / 
                     <a href="https://www.linkedin.com/in/kenneth-thakur">LinkedIn</a> / 
                     <a href="https://github.com/Kenneth-Thakur">GitHub</a>
                 </div>
             </div>
-            <div class="profile-pic">
-                <img src="profile.jpg" alt="Kenneth Thakur">
-            </div>
         </header>
 
         <section>
-            <h2><del>Technical</del> Data Science</h2>
-            <p>My <del>technical</del> data science interests are generally in deep learning (time-series, reasoning, forecasting) and their applications to space weather forecasting and autonomous orbital satellite collision avoidance systems.</p>
+            <h2>Selected Projects</h2>
             
             <div class="project">
                 <div class="project-img">
