--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </header>
 
         <section>
-            <h2>Selected Projects</h2>
+            <h2>Technical Projects</h2>
             
             <div class="project">
                 <div class="project-img">
@@ -34,9 +34,9 @@
                 <div class="project-info">
                     <a class="project-title" href="#">AI-Powered Solar Flare Prediction System</a>
                     <p class="authors"><strong>Kenneth Thakur</strong>, NASA API, TensorFlow</p>
-                    <p class="status">University of Auckland 2025</p>
+                    <p class="status">Technical Project 2025</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">We built a deep learning model to predict solar flares using real-time magnetogram data from NASA's Solar Dynamics Observatory. Our approach engineered magnetic complexity features for time-series forecasting, achieving high accuracy for rare events.</p>
+                    <p class="description">I built a deep learning model to predict solar flares using real-time magnetogram data from NASA's Solar Dynamics Observatory. My approach engineered magnetic complexity features for time-series forecasting, achieving high accuracy for rare events.</p>
                 </div>
             </div>
 
@@ -49,7 +49,7 @@
                     <p class="authors"><strong>Kenneth Thakur</strong>, Reinforcement Learning, PPO</p>
                     <p class="status">Technical Project 2025</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">I engineered a Deep Reinforcement Learning agent to control satellite thrusters in high-fidelity orbital simulations. Utilizing CelesTrak TLE data, we simulated a realistic debris environment, training the agent to execute fuel-efficient evasion maneuvers.</p>
+                    <p class="description">I engineered a Deep Reinforcement Learning agent to control satellite thrusters in high-fidelity orbital simulations. Utilizing CelesTrak TLE data, I simulated a realistic debris environment, training the agent to execute fuel-efficient evasion maneuvers.</p>
                 </div>
             </div>
 
@@ -62,27 +62,9 @@
                     <p class="authors"><strong>Kenneth Thakur</strong>, Scikit-Learn, Spectral Analysis</p>
                     <p class="status">Technical Project 2025</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">We trained Random Forest classifiers to analyze astronomical spectral data, identifying asteroids with high probabilities of containing valuable mining resources. Our project created an interactive 3D visualization of the inner solar system orbital map.</p>
+                    <p class="description">I trained Random Forest classifiers to analyze astronomical spectral data, identifying asteroids with high probabilities of containing valuable mining resources. This project created an interactive 3D visualization of the inner solar system orbital map.</p>
                 </div>
             </div>
-        </section>
-
-        <section class="teaching">
-            <h2>Community Service</h2>
-            <ul>
-                <li>
-                    <a href="#">Class Representative</a>, University of Auckland
-                    <div class="sub-text">2023 & 2025</div>
-                </li>
-                <li>
-                    <a href="#">Lets Talk to Locals Volunteer</a>, University of Auckland
-                    <div class="sub-text">2023 - 2024</div>
-                </li>
-                <li>
-                    <a href="#">Youth Leader</a>, St John Ambulance
-                    <div class="sub-text">2020 - 2021</div>
-                </li>
-            </ul>
         </section>
     </div>
 </body>
