--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
     <div class="container">
         <header>
-            <div class="profile-pic">
-                <img src="profile.jpg" alt="Kenneth Thakur">
-            </div>
             <div class="bio">
                 <h1>Kenneth Thakur</h1>
-                <p>I am a BSc Student in Information Technology Management at the University of Auckland and a Science Scholar (Top 5%). My work focuses on building autonomous systems using Deep Learning and Reinforcement Learning.</p>
+                <p>I am a BSc Student in Information Technology Management at the <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>. Invited to the Science Scholars program (Top 5%) for academic excellence. My interests lie in Deep Learning, Reinforcement Learning, and applications to various autonomous systems.</p>
                 <div class="links">
                     <a href="mailto:ktha335@aucklanduni.ac.nz">Email</a> / 
                     <a href="https://www.linkedin.com/in/kenneth-thakur">LinkedIn</a> / 
                     <a href="https://github.com/Kenneth-Thakur">GitHub</a>
                 </div>
+            </div>
+            <div class="profile-pic">
+                <img src="profile.jpg" alt="Kenneth Thakur">
             </div>
         </header>
 
@@ -34,9 +34,9 @@
                 <div class="project-info">
                     <a class="project-title" href="#">AI-Powered Solar Flare Prediction System</a>
                     <p class="authors"><strong>Kenneth Thakur</strong>, NASA API, TensorFlow</p>
-                    <p class="status">Technical Project 2025</p>
+                    <p class="status">Deep Learning, 2025</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">I built a deep learning model to predict solar flares using real-time magnetogram data from NASA's Solar Dynamics Observatory. My approach engineered magnetic complexity features for time-series forecasting, achieving high accuracy for rare events.</p>
+                    <p class="description">Leveraging real-time magnetogram data from NASA's Solar Dynamics Observatory, this deep learning model predicts solar flares. The system engineers magnetic complexity features for time-series forecasting, achieving high accuracy for these rare space events.</p>
                 </div>
             </div>
 
@@ -47,9 +47,9 @@
                 <div class="project-info">
                     <a class="project-title" href="#">AI-Autonomous Satellite Collision Avoidance</a>
                     <p class="authors"><strong>Kenneth Thakur</strong>, Reinforcement Learning, PPO</p>
-                    <p class="status">Technical Project 2025</p>
+                    <p class="status">Reinforcement Learning, 2025</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">I engineered a Deep Reinforcement Learning agent to control satellite thrusters in high-fidelity orbital simulations. Utilizing CelesTrak TLE data, I simulated a realistic debris environment, training the agent to execute fuel-efficient evasion maneuvers.</p>
+                    <p class="description">To prevent Kessler Syndrome, this project deploys a Deep Reinforcement Learning agent to control satellite thrusters. By simulating debris environments with CelesTrak TLE data, the agent learns to execute fuel-efficient orbital evasion maneuvers.</p>
                 </div>
             </div>
 
@@ -60,9 +60,9 @@
                 <div class="project-info">
                     <a class="project-title" href="#">Data-Driven Asteroid Mining Prospector</a>
                     <p class="authors"><strong>Kenneth Thakur</strong>, Scikit-Learn, Spectral Analysis</p>
-                    <p class="status">Technical Project 2025</p>
+                    <p class="status">Machine Learning, 2025</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">I trained Random Forest classifiers to analyze astronomical spectral data, identifying asteroids with high probabilities of containing valuable mining resources. This project created an interactive 3D visualization of the inner solar system orbital map.</p>
+                    <p class="description">Random Forest classifiers analyze astronomical spectral data to identify asteroids with high resource probability. The resulting tool features an interactive 3D visualization, mapping the inner solar system to highlight valuable potential mining targets.</p>
                 </div>
             </div>
         </section>
