--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p class="authors"><strong>Kenneth Thakur</strong>, NASA API, TensorFlow</p>
                     <p class="status">Deep Learning, 2025</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">Leveraging real-time magnetogram data from NASA's Solar Dynamics Observatory, this deep learning model predicts solar flares. The system engineers magnetic complexity features for time-series forecasting, achieving high accuracy for these rare space events.</p>
+                    <p class="description">This system predicts dangerous solar flares 24 hours before they happen. By analyzing real-time magnetic data from NASA satellites, the model identifies complex patterns to forecast space weather events with high accuracy.</p>
                 </div>
             </div>
 
@@ -49,7 +49,7 @@
                     <p class="authors"><strong>Kenneth Thakur</strong>, Reinforcement Learning, PPO</p>
                     <p class="status">Reinforcement Learning, 2025</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">To prevent Kessler Syndrome, this project deploys a Deep Reinforcement Learning agent to control satellite thrusters. By simulating debris environments with CelesTrak TLE data, the agent learns to execute fuel-efficient orbital evasion maneuvers.</p>
+                    <p class="description">To prevent satellites from crashing into space debris, I built an AI agent that controls thrusters automatically. It learns to dodge obstacles in a realistic simulation while minimizing fuel usage for maneuvers.</p>
                 </div>
             </div>
 
@@ -62,7 +62,7 @@
                     <p class="authors"><strong>Kenneth Thakur</strong>, Scikit-Learn, Spectral Analysis</p>
                     <p class="status">Machine Learning, 2025</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">Random Forest classifiers analyze astronomical spectral data to identify asteroids with high resource probability. The resulting tool features an interactive 3D visualization, mapping the inner solar system to highlight valuable potential mining targets.</p>
+                    <p class="description">This tool identifies asteroids that contain valuable mining resources. Using machine learning to analyze light spectrum data, it pinpoints high-value targets and maps them on an interactive 3D solar system visualization.</p>
                 </div>
             </div>
         </section>
