--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 </div>
                 <div class="project-info">
                     <a class="project-title" href="#">AI-Powered Solar Flare Prediction System</a>
-                    <p class="authors"><strong>Kenneth Thakur</strong>, NASA API, TensorFlow</p>
-                    <p class="status">Deep Learning, 2025</p>
+                    <p class="authors"><strong>Kenneth Thakur</strong></p>
+                    <p class="tech-stack">Python, TensorFlow (LSTM/CNN), NASA API</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">This system predicts dangerous solar flares 24 hours before they happen. By analyzing real-time magnetic data from NASA satellites, the model identifies complex patterns to forecast space weather events with high accuracy.</p>
+                    <p class="description">Leveraging NASA magnetograms, I built a deep learning model predicting M-class and X-class solar flares. Engineering magnetic complexity features for Time-Series models, the system achieves high accuracy in forecasting rare space weather events.</p>
                 </div>
             </div>
 
@@ -46,10 +46,10 @@
                 </div>
                 <div class="project-info">
                     <a class="project-title" href="#">AI-Autonomous Satellite Collision Avoidance</a>
-                    <p class="authors"><strong>Kenneth Thakur</strong>, Reinforcement Learning, PPO</p>
-                    <p class="status">Reinforcement Learning, 2025</p>
+                    <p class="authors"><strong>Kenneth Thakur</strong></p>
+                    <p class="tech-stack">Reinforcement Learning (PPO), Python</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">To prevent satellites from crashing into space debris, I built an AI agent that controls thrusters automatically. It learns to dodge obstacles in a realistic simulation while minimizing fuel usage for maneuvers.</p>
+                    <p class="description">To prevent Kessler Syndrome, I engineered a Deep Reinforcement Learning agent controlling satellite thrusters. Using CelesTrak TLE data to simulate realistic debris environments, the agent executes fuel-efficient evasion maneuvers to avoid orbital collisions.</p>
                 </div>
             </div>
 
@@ -59,10 +59,10 @@
                 </div>
                 <div class="project-info">
                     <a class="project-title" href="#">Data-Driven Asteroid Mining Prospector</a>
-                    <p class="authors"><strong>Kenneth Thakur</strong>, Scikit-Learn, Spectral Analysis</p>
-                    <p class="status">Machine Learning, 2025</p>
+                    <p class="authors"><strong>Kenneth Thakur</strong></p>
+                    <p class="tech-stack">Scikit-Learn, Pandas, Spectral Analysis</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">This tool identifies asteroids that contain valuable mining resources. Using machine learning to analyze light spectrum data, it pinpoints high-value targets and maps them on an interactive 3D solar system visualization.</p>
+                    <p class="description">This project utilizes Random Forest classifiers to analyze astronomical spectral data, identifying asteroids with high resource probability. I created an interactive 3D visualization of the inner solar system to map high-value mining targets.</p>
                 </div>
             </div>
         </section>
