--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div class="project-info">
                     <a class="project-title" href="#">AI-Powered Solar Flare Prediction System</a>
                     <p class="authors"><strong>Kenneth Thakur</strong></p>
+                    <p class="status">Deep Learning · 2025</p>
                     <p class="tech-stack">Python, TensorFlow (LSTM/CNN), NASA API</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
                     <p class="description">Leveraging NASA magnetograms, I built a deep learning model predicting M-class and X-class solar flares. Engineering magnetic complexity features for Time-Series models, the system achieves high accuracy in forecasting rare space weather events.</p>
@@ -47,6 +48,7 @@
                 <div class="project-info">
                     <a class="project-title" href="#">AI-Autonomous Satellite Collision Avoidance</a>
                     <p class="authors"><strong>Kenneth Thakur</strong></p>
+                    <p class="status">Reinforcement Learning · 2025</p>
                     <p class="tech-stack">Reinforcement Learning (PPO), Python</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
                     <p class="description">To prevent Kessler Syndrome, I engineered a Deep Reinforcement Learning agent controlling satellite thrusters. Using CelesTrak TLE data to simulate realistic debris environments, the agent executes fuel-efficient evasion maneuvers to avoid orbital collisions.</p>
@@ -60,6 +62,7 @@
                 <div class="project-info">
                     <a class="project-title" href="#">Data-Driven Asteroid Mining Prospector</a>
                     <p class="authors"><strong>Kenneth Thakur</strong></p>
+                    <p class="status">Machine Learning · 2025</p>
                     <p class="tech-stack">Scikit-Learn, Pandas, Spectral Analysis</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
                     <p class="description">This project utilizes Random Forest classifiers to analyze astronomical spectral data, identifying asteroids with high resource probability. I created an interactive 3D visualization of the inner solar system to map high-value mining targets.</p>
