--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <header>
             <div class="bio">
                 <h1>Kenneth Thakur</h1>
-                <p>I am a BSc Student in Information Technology Management at the <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>. Invited to the Science Scholars program (Top 5%) for academic excellence. My interests lie in Deep Learning, Reinforcement Learning, and applications to various autonomous systems.</p>
+                <!-- UPDATED SECTION BELOW -->
+                <p>I am a BSc Student in Information Technology Management at the <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>. Invited to the Science Scholars program (Top 5%) for academic excellence. My interests lie in Deep Learning, Reinforcement Learning, and solving real-world problems.</p>
+                <!-- END OF UPDATED SECTION -->
                 <div class="links">
                     <a href="mailto:ktha335@aucklanduni.ac.nz">Email</a> / 
                     <a href="https://www.linkedin.com/in/kenneth-thakur">LinkedIn</a> / 
