--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         <header>
             <div class="bio">
                 <h1>Kenneth Thakur</h1>
-                <!-- UPDATED SECTION BELOW -->
-                <p>I am a BSc Student in Information Technology Management at the <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>. Invited to the Science Scholars program (Top 5%) for academic excellence. My interests lie in Deep Learning, Reinforcement Learning, and solving real-world problems.</p>
-                <!-- END OF UPDATED SECTION -->
+                <p>I am a BSc Student in Information Technology Management at the <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>. Invited to the Science Scholars program (Top 5%) for academic excellence. My interests lie in Computational Intelligence, Forensic Data Analysis, and Critical Infrastructure Security.</p>
                 <div class="links">
-                    <a href="mailto:ktha335@aucklanduni.ac.nz">Email</a> / 
+                    <a href="mailto:kenneth.thakur@gmail.com">Email</a> / 
                     <a href="https://www.linkedin.com/in/kenneth-thakur">LinkedIn</a> / 
                     <a href="https://github.com/Kenneth-Thakur">GitHub</a>
                 </div>
@@ -29,45 +27,48 @@
         <section>
             <h2>Technical Projects</h2>
             
+            <!-- Project 1: Sentinel -->
             <div class="project">
                 <div class="project-img">
-                    <img src="solar-flare.png" alt="Solar Flare Project">
+                    <img src="sentinel.png" alt="Sentinel Project Dashboard">
                 </div>
                 <div class="project-info">
-                    <a class="project-title" href="#">AI-Powered Solar Flare Prediction System</a>
+                    <a class="project-title" href="#">Sentinel: Geopolitical Conflict Monitor</a>
                     <p class="authors"><strong>Kenneth Thakur</strong></p>
-                    <p class="status">Deep Learning · 2025</p>
-                    <p class="tech-stack">Python, TensorFlow (LSTM/CNN), NASA API</p>
-                    <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">Leveraging NASA magnetograms, I built a deep learning model predicting M-class and X-class solar flares. Engineering magnetic complexity features for Time-Series models, the system achieves high accuracy in forecasting rare space weather events.</p>
+                    <p class="status">Open Source Intelligence (OSINT) · 2025</p>
+                    <p class="tech-stack">Python, Spacy (NER), NewsAPI, Plotly</p>
+                    <p class="project-links"><a href="#">project page</a> / <a href="#">code</a></p>
+                    <p class="description">Architected an intelligence pipeline designed to aggregate and visualize global conflict data in real-time. Deployed Named Entity Recognition (NER) algorithms to extract geolocation data from unstructured intelligence feeds, identifying emerging hotspots before major news coverage.</p>
                 </div>
             </div>
 
+            <!-- Project 2: Aegis -->
             <div class="project">
                 <div class="project-img">
-                    <img src="satellite.png" alt="Satellite Project">
+                    <img src="aegis.png" alt="Aegis Anomaly Detector">
                 </div>
                 <div class="project-info">
-                    <a class="project-title" href="#">AI-Autonomous Satellite Collision Avoidance</a>
+                    <a class="project-title" href="#">Aegis: Public Expenditure Anomaly Detector</a>
                     <p class="authors"><strong>Kenneth Thakur</strong></p>
-                    <p class="status">Reinforcement Learning · 2025</p>
-                    <p class="tech-stack">Reinforcement Learning (PPO), Python</p>
-                    <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">To prevent Kessler Syndrome, I engineered a Deep Reinforcement Learning agent controlling satellite thrusters. Using CelesTrak TLE data to simulate realistic debris environments, the agent executes fuel-efficient evasion maneuvers to avoid orbital collisions.</p>
+                    <p class="status">Forensic Data Science · 2025</p>
+                    <p class="tech-stack">Python, Scikit-Learn (Isolation Forest), Pandas, Benford’s Law</p>
+                    <p class="project-links"><a href="#">project page</a> / <a href="#">code</a></p>
+                    <p class="description">Developed a forensic accounting engine utilizing unsupervised machine learning to detect fraud and inefficiency in large-scale procurement datasets. Implemented Isolation Forest algorithms to flag statistical outliers in transaction logs, identifying potential waste or embezzlement.</p>
                 </div>
             </div>
 
+            <!-- Project 3: Apex -->
             <div class="project">
                 <div class="project-img">
-                    <img src="asteroid.png" alt="Asteroid Project">
+                    <img src="apex.png" alt="Apex Traffic Optimizer">
                 </div>
                 <div class="project-info">
-                    <a class="project-title" href="#">Data-Driven Asteroid Mining Prospector</a>
+                    <a class="project-title" href="#">Apex: Intelligent Traffic Flow Optimizer</a>
                     <p class="authors"><strong>Kenneth Thakur</strong></p>
-                    <p class="status">Machine Learning · 2025</p>
-                    <p class="tech-stack">Scikit-Learn, Pandas, Spectral Analysis</p>
-                    <p class="project-links"><a href="#">project page</a> / <a href="#">arXiv</a> / <a href="#">code</a></p>
-                    <p class="description">This project utilizes Random Forest classifiers to analyze astronomical spectral data, identifying asteroids with high resource probability. I created an interactive 3D visualization of the inner solar system to map high-value mining targets.</p>
+                    <p class="status">Computer Vision & Smart Infrastructure · 2025</p>
+                    <p class="tech-stack">Python, OpenCV, NumPy, Simulation Logic</p>
+                    <p class="project-links"><a href="#">project page</a> / <a href="#">code</a></p>
+                    <p class="description">Engineered a computer vision-based traffic management system designed to optimize intersection throughput. Utilized OpenCV for real-time object detection to count vehicle density and developed a dynamic control algorithm that adjusts signal timing to reduce congestion.</p>
                 </div>
             </div>
         </section>
