--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p class="status">Open Source Intelligence (OSINT) · 2025</p>
                     <p class="tech-stack">Python, Spacy (NER), NewsAPI, Plotly</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">code</a></p>
-                    <p class="description">Architected an intelligence pipeline designed to aggregate and visualize global conflict data in real-time. Deployed Named Entity Recognition (NER) algorithms to extract geolocation data from unstructured intelligence feeds, identifying emerging hotspots before major news coverage.</p>
+                    <p class="description">A real-time dashboard that tracks global conflict. It scans news headlines using Natural Language Processing to identify location names and places them on an interactive map, helping users spot emerging instability early.</p>
                 </div>
             </div>
 
@@ -53,7 +53,7 @@
                     <p class="status">Forensic Data Science · 2025</p>
                     <p class="tech-stack">Python, Scikit-Learn (Isolation Forest), Pandas, Benford’s Law</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">code</a></p>
-                    <p class="description">Developed a forensic accounting engine utilizing unsupervised machine learning to detect fraud and inefficiency in large-scale procurement datasets. Implemented Isolation Forest algorithms to flag statistical outliers in transaction logs, identifying potential waste or embezzlement.</p>
+                    <p class="description">An automated auditing tool that detects financial fraud and waste. Using machine learning, it scans large transaction datasets to flag suspicious payments that don't match normal spending patterns, acting as a digital forensic accountant.</p>
                 </div>
             </div>
 
@@ -68,7 +68,7 @@
                     <p class="status">Computer Vision & Smart Infrastructure · 2025</p>
                     <p class="tech-stack">Python, OpenCV, NumPy, Simulation Logic</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">code</a></p>
-                    <p class="description">Engineered a computer vision-based traffic management system designed to optimize intersection throughput. Utilized OpenCV for real-time object detection to count vehicle density and developed a dynamic control algorithm that adjusts signal timing to reduce congestion.</p>
+                    <p class="description">A smart traffic system that reduces congestion at intersections. It uses computer vision to count cars in real-time and automatically adjusts traffic light timers to clear jams faster than traditional fixed timers.</p>
                 </div>
             </div>
         </section>
