Rename project from Apex to Citadel

--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
                 </div>
             </div>
 
-            <!-- Project 3: Apex -->
+            <!-- Project 3: Citadel -->
             <div class="project">
                 <div class="project-img">
-                    <img src="apex.png" alt="Apex Traffic Optimizer">
+                    <img src="citadel.png" alt="Citadel Security Scanner">
                 </div>
                 <div class="project-info">
-                    <a class="project-title" href="#">Apex: Intelligent Traffic Flow Optimizer</a>
+                    <a class="project-title" href="#">Citadel: Critical Infrastructure Vulnerability Scanner</a>
                     <p class="authors"><strong>Kenneth Thakur</strong></p>
-                    <p class="status">Computer Vision & Smart Infrastructure · 2025</p>
-                    <p class="tech-stack">Python, OpenCV, NumPy, Simulation Logic</p>
+                    <p class="status">Cybersecurity & Digital Defense · 2025</p>
+                    <p class="tech-stack">Python, Shodan API, NIST NVD API, Pandas</p>
                     <p class="project-links"><a href="#">project page</a> / <a href="#">code</a></p>
-                    <p class="description">A smart traffic system that reduces congestion at intersections. It uses computer vision to count cars in real-time and automatically adjusts traffic light timers to clear jams faster than traditional fixed timers.</p>
+                    <p class="description">An automated security tool that finds weak spots in a network before hackers do. It scans servers and IoT devices, then checks them against a national database of known vulnerabilities to generate a priority list of what needs fixing immediately.</p>
                 </div>
             </div>
         </section>
