--- a/index.html
+++ b/index.html
@@ -3,158 +3,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kenneth Thakur | Portfolio</title>
+    <title>Kenneth Thakur</title>
     <style>
-        :root {
-            --bg-color: #000000;
-            --text-color: #f2f2f7;
-            --accent-color: #ff3b30;
-            --secondary-text: #8e8e93;
-            --border-color: #2c2c2e;
-            --link-color: #0A84FF;
-        }
-
         body {
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            line-height: 1.6;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+            color: #333;
+            background-color: #fff;
+            line-height: 1.5;
             margin: 0;
             padding: 0;
         }
 
         .container {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 60px 20px;
+            max-width: 850px;
+            margin: 60px auto;
+            padding: 0 20px;
         }
 
-        /* Profile Header */
+        /* Header Section */
         header {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 80px;
+            margin-bottom: 50px;
         }
 
         .bio-text {
             flex: 1;
-            padding-right: 40px;
+            padding-right: 30px;
         }
 
         .bio-text h1 {
-            font-size: 2.5em;
-            margin: 0 0 10px 0;
-            font-weight: 700;
+            font-size: 2.2em;
+            margin: 0 0 15px 0;
+            color: #000;
         }
 
         .bio-text p {
-            font-size: 1.1em;
-            color: var(--text-color);
+            font-size: 1.05em;
             margin-bottom: 20px;
         }
 
         .profile-img {
-            width: 220px;
-            height: 220px;
+            width: 180px;
+            height: 180px;
             border-radius: 50%;
             object-fit: cover;
-            border: 2px solid var(--border-color);
         }
 
         .social-links a {
-            color: var(--link-color);
+            color: #007bff;
             text-decoration: none;
-            margin-right: 15px;
-            font-weight: 500;
+            margin-right: 12px;
         }
 
         .social-links a:hover {
             text-decoration: underline;
         }
 
-        /* Project Section */
+        /* Projects Section */
         h2 {
-            font-size: 1.8em;
-            border-bottom: 1px solid var(--border-color);
+            font-size: 1.5em;
+            margin-top: 50px;
+            margin-bottom: 30px;
+            border-bottom: 1px solid #eee;
             padding-bottom: 10px;
-            margin-bottom: 40px;
-            font-weight: 600;
         }
 
-        .project-card {
+        .project-entry {
             display: flex;
-            margin-bottom: 60px;
-            gap: 30px;
+            margin-bottom: 45px;
+            align-items: flex-start;
         }
 
-        .project-card img {
-            width: 280px;
-            border-radius: 6px;
-            border: 1px solid var(--border-color);
-            background: #1c1c1e;
-        }
-
-        .project-info {
-            flex: 1;
+        .project-img {
+            width: 160px;
+            margin-right: 25px;
+            border-radius: 2px;
+            flex-shrink: 0;
         }
 
         .project-info h3 {
             margin: 0;
-            font-size: 1.4em;
-            color: var(--link-color);
+            font-size: 1.15em;
+            color: #007bff;
         }
 
-        .project-info .author {
-            margin: 5px 0;
-            font-weight: 700;
+        .project-info p {
+            margin: 4px 0;
             font-size: 0.95em;
         }
 
-        .project-info .category {
-            color: var(--accent-color);
+        .project-category {
+            color: #d93025; /* Red academic style */
+            font-style: italic;
             font-weight: bold;
-            text-transform: uppercase;
-            font-size: 0.85em;
-            letter-spacing: 1px;
-            margin-bottom: 8px;
-            display: block;
         }
 
-        .project-info .stack {
-            font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, monospace;
-            font-size: 0.85em;
-            color: var(--secondary-text);
-            margin-bottom: 15px;
+        .project-stack {
+            color: #666;
+            font-size: 0.9em;
         }
 
-        .project-info .links {
-            margin-bottom: 15px;
-        }
-
-        .project-info .links a {
-            color: var(--link-color);
+        .project-links a {
+            color: #007bff;
             text-decoration: none;
             font-size: 0.9em;
         }
 
-        .project-info .description {
-            font-size: 0.95em;
-            color: var(--text-color);
+        .project-description {
+            margin-top: 8px !important;
+            color: #444;
         }
 
-        @media (max-width: 768px) {
-            header, .project-card {
+        @media (max-width: 600px) {
+            header, .project-entry {
                 flex-direction: column;
-                align-items: flex-start;
+                text-align: left;
             }
             .profile-img {
-                margin-top: 30px;
-                width: 150px;
-                height: 150px;
+                margin-top: 20px;
+                width: 120px;
+                height: 120px;
             }
-            .project-card img {
+            .project-img {
                 width: 100%;
+                max-width: 250px;
+                margin-bottom: 15px;
             }
         }
     </style>
@@ -162,7 +137,7 @@
 <body>
 
     <div class="container">
-        <!-- Header Section -->
+        <!-- Main Header -->
         <header>
             <div class="bio-text">
                 <h1>Kenneth Thakur</h1>
@@ -172,68 +147,59 @@
                     My interests lie in Computational Intelligence, Forensic Data Analysis, and Critical Infrastructure Security.
                 </p>
                 <div class="social-links">
-                    <a href="mailto:your-email@example.com">Email</a>
-                    <a href="https://linkedin.com/in/your-profile">LinkedIn</a>
+                    <a href="mailto:your-email@example.com">Email</a> /
+                    <a href="https://linkedin.com/in/your-profile">LinkedIn</a> /
                     <a href="https://github.com/Kenneth-Thakur">GitHub</a>
                 </div>
             </div>
             <img src="profile.jpg" alt="Kenneth Thakur" class="profile-img">
         </header>
 
-        <!-- Technical Projects Section -->
+        <!-- Projects -->
         <section>
             <h2>Technical Projects</h2>
 
-            <!-- Project 1: Sentinel -->
-            <div class="project-card">
-                <img src="sentinel_ds_hero.png" alt="Sentinel Conflict Treemap">
+            <!-- Sentinel -->
+            <div class="project-entry">
+                <img src="sentinel_ds_hero.png" alt="Sentinel Monitor" class="project-img">
                 <div class="project-info">
-                    <span class="category">Open Source Intelligence (OSINT) · 2026</span>
                     <h3>Sentinel: Geopolitical Conflict Monitor</h3>
-                    <p class="author">Kenneth Thakur</p>
-                    <p class="stack">Python, NLP (RegEx), RSS Integration, Pandas, Dash</p>
-                    <div class="links">
-                        <a href="#">project page</a> / <a href="#">code</a>
-                    </div>
-                    <p class="description">
-                        A real-time dashboard that tracks global conflict. It scans news headlines using Natural Language Processing 
-                        to identify location names and places them on an interactive map, helping users spot emerging instability early.
+                    <p><strong>Kenneth Thakur</strong></p>
+                    <p class="project-category">Open Source Intelligence (OSINT) · 2026</p>
+                    <p class="project-stack">Python, NLP (RegEx), RSS Integration, Pandas, Dash</p>
+                    <p class="project-links"><a href="#">project page</a> / <a href="#">code</a></p>
+                    <p class="project-description">
+                        A real-time dashboard that tracks global conflict. It scans news headlines using Natural Language Processing to identify location names and places them on an interactive map, helping users spot emerging instability early.
                     </p>
                 </div>
             </div>
 
-            <!-- Project 2: Aegis -->
-            <div class="project-card">
-                <img src="aegis_placeholder.png" alt="Aegis Anomaly Detector">
+            <!-- Aegis -->
+            <div class="project-entry">
+                <img src="sentinel_plot.png" alt="Aegis Detector" class="project-img"> <!-- Temporary placeholder -->
                 <div class="project-info">
-                    <span class="category" style="color: #ffd60a;">Forensic Data Science · 2026</span>
                     <h3>Aegis: Public Expenditure Anomaly Detector</h3>
-                    <p class="author">Kenneth Thakur</p>
-                    <p class="stack">Python, Scikit-Learn (Isolation Forest), Benford's Law, Pandas</p>
-                    <div class="links">
-                        <a href="#">project page</a> / <a href="#">code</a>
-                    </div>
-                    <p class="description">
-                        An automated auditing tool that detects financial fraud and waste. Using machine learning, it scans large 
-                        transaction datasets to flag suspicious payments that don't match normal spending patterns, acting as a digital forensic accountant.
+                    <p><strong>Kenneth Thakur</strong></p>
+                    <p class="project-category">Forensic Data Science · 2026</p>
+                    <p class="project-stack">Python, Scikit-Learn (Isolation Forest), Benford's Law, Pandas</p>
+                    <p class="project-links"><a href="#">project page</a> / <a href="#">code</a></p>
+                    <p class="project-description">
+                        An automated auditing tool that detects financial fraud and waste. Using machine learning, it scans large transaction datasets to flag suspicious payments that don't match normal spending patterns, acting as a digital forensic accountant.
                     </p>
                 </div>
             </div>
 
-            <!-- Project 3: Citadel -->
-            <div class="project-card">
-                <img src="citadel_placeholder.png" alt="Citadel Security Scanner">
+            <!-- Citadel -->
+            <div class="project-entry">
+                <div style="width: 160px; height: 100px; background: #f9f9f9; margin-right: 25px; border: 1px solid #eee; display: flex; align-items: center; justify-content: center; font-size: 10px; color: #999;" class="project-img">Image Coming Soon</div>
                 <div class="project-info">
-                    <span class="category" style="color: #32d74b;">Cybersecurity & Digital Defense · 2026</span>
                     <h3>Citadel: Critical Infrastructure Vulnerability Scanner</h3>
-                    <p class="author">Kenneth Thakur</p>
-                    <p class="stack">Python, Shodan API, NIST NVD API, Pandas</p>
-                    <div class="links">
-                        <a href="#">project page</a> / <a href="#">code</a>
-                    </div>
-                    <p class="description">
-                        An automated security tool that finds weak spots in a network before hackers do. It scans servers and IoT devices, 
-                        then checks them against a national database of known vulnerabilities to generate a priority list of what needs fixing immediately.
+                    <p><strong>Kenneth Thakur</strong></p>
+                    <p class="project-category">Cybersecurity & Digital Defense · 2026</p>
+                    <p class="project-stack">Python, Shodan API, NIST NVD API, Pandas</p>
+                    <p class="project-links"><a href="#">project page</a> / <a href="#">code</a></p>
+                    <p class="project-description">
+                        An automated security tool that finds weak spots in a network before hackers do. It scans servers and IoT devices, then checks them against a national database of known vulnerabilities to generate a priority list of what needs fixing immediately.
                     </p>
                 </div>
             </div>
